--- a/editors/post-editor.html
+++ b/editors/post-editor.html
@@ -1,7 +1,7 @@
-<aside class='Editor -comment' data-preserve='true'>
+<aside class='Editor' data-preserve='true'>
   <div>
-    <input name='name' /> <br />
-    <textarea name='body' rows='4' />
+    <input class='-title' name='title' /> <br />
+    <textarea name='body' rows='20' />
   </div>
   <footer>
     <button data-action='save'>Save</button> or <a data-action='cancel' href='#'>Cancel</a>
