--- a/slides.html
+++ b/slides.html
@@ -233,9 +233,9 @@ pre > code {
 <h2>I want this in the <strong>browser</strong>!</h2></section>
     <section class="slide"><h1>Browserify</h1>
 
-<h2>by James "substack" Haliday</h2>
+<h2>by James "substack" Halliday</h2>
 
-<h2><a href="https://npmjs.org/packages/browserify">https://npmjs.org/packages/browserify</a></h2></section>
+<h2><a href="https://npmjs.org/package/browserify">https://npmjs.org/package/browserify</a></h2></section>
     <section class="slide"><h3>Browserify</h3>
 
 <p>Exactly the same as writing Node on the server.</p>
